welcome.lessons.welcome.array.array667.Array667.scala.error
array667:12: error: Unmatched closing brace '}' ignored here
 }
 ^