welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
  var res = 0;
  for (i <- 0 to nums.length-2) {
    if (nums(i)==6) {
      if (nums(i+1)==6 || nums(i+1)==7)
      	res=res+1;
    	}
    }
  }
	return res
}